css/header.css
.header {
  /* background: linear-gradient(
    135deg,
    rgb(3, 74, 166) 0%,
    rgb(132, 159, 245) 20%,
    rgb(212, 224, 255) 70%,
    rgb(245, 248, 255) 100%
  );
  Design Versuch
  */

  padding: 1rem 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
}

.logo img {
  height: 70px;
  box-shadow: none;
}

.navigation-header {
  display: flex;
}

.navigation-list-header {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navigation-list-element a {
  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  color: black;
  opacity: 1;
  font-weight: 600;
  text-decoration: none;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  transition: background-color 0.3s ease;
}

.email-link {
  color: rgb(3, 74, 166);
  font-weight: 500;
  text-decoration: none;
  font-size: 1rem;
}

.email-link:hover {
  text-decoration: underline;
}

/* Burger Menu Styles */
.burger-menu {
  display: none;
  flex-direction: column;
  cursor: pointer;
  padding: 5px;
}

.burger-line {
  width: 25px;
  height: 3px;
  background-color: rgb(3, 74, 166);
  border-radius: 2px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  margin: 3px 0;
  transition: 0.3s;
}

/* Animation for burger menu */
.burger-menu.active .burger-line:nth-child(1) {
  transform: rotate(-45deg) translate(-6px, 6px);
}

.burger-menu.active .burger-line:nth-child(2) {
  opacity: 0;
}

.burger-menu.active .burger-line:nth-child(3) {
  transform: rotate(45deg) translate(-6px, -6px);
}

/* Mobile Navigation */
.mobile-nav {
  font-family: "Roboto", sans-serif;
  text-align: center;
  font-size: larger;
  font-weight: 600;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  background: white;
  box-shadow: 0 2px 5px rgba(3, 74, 166, 0.3);
  z-index: 1000;
  border-bottom: 2px solid rgb(3, 74, 166);
  border-radius: 0 0 8px 8px;
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.4s ease;
}

.mobile-nav.active {
  max-height: 500px;
  display: block;
}

.mobile-nav-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.mobile-nav-list li {
  box-shadow: 0 2px 5px rgba(3, 74, 166, 0.2);
  border-bottom: 2px solid rgb(3, 74, 166);
  border-radius: 8px;
}

.mobile-nav-list li:last-child {
  border-bottom: none;
}

.mobile-nav-list a {
  display: block;
  color: black;
  text-decoration: none;
  padding: 1rem 2rem;
  transition: background-color 0.3s ease;
}

/* Responsive Design */
@media (max-width: 1023px) {
  .navigation-header {
    display: none;
  }

  .burger-menu {
    display: flex;
  }

  .email-link {
    display: none;
  }

  .header {
    padding: 1rem;
  }
}

@media (min-width: 1024px) {
  .burger-menu {
    display: none !important;
  }

  .mobile-nav {
    display: none !important;
  }
}

